# aalmazan.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  archives.html  authors.html  categories.html  index.html  package-lock.json  package.json  pelicanconf.py  postcss.config.js  publishconf.py  pyproject.toml  sitemap.xml  tags.html  tailwind.config.js  tasks.py
author/: allan-almazan.html
category/: blog.html  projects.html
content/: 2023-11-13-the-blog.md  2023-11-the-next.md  CONTENT_LICENSE  _base
content/pages/: about.md
content/posts/: 2023-11-13-the-blog.md  2023-11-15-rpi-kubernetes.md  2023-11-the-next.md  2023-11-todo-everything.md  2024-01-11-todo-everything.md
drafts/: my-super-post.html  the-next.html
feeds/: all.atom.xml  blog.atom.xml  projects.atom.xml
pages/: about.html
posts/: 2023-11-kubernetes-rpi-pt-1.html  2023-11-my-super-post.html  2023-11-the-blog.html  2024-01-todo-everything-begins.html
tag/: blog.html  hardware.html  kubernetes.html  linux.html  programming.html  projects.html  todo-everything.html
theme/css/: styles.css
themes/aalmazan-tw/css/: styles.css
themes/aalmazan-tw/static/css/: styles.css
themes/aalmazan-tw/templates/: base.html  header.html  page.html
themes/aalmazan/css/: styles.css  tailwind.css
themes/aalmazan/static/css/: styles.css
themes/aalmazan/templates/: archives.html  archives.j2  article.html  article.j2  base.html  base.j2  categories.html  categories.j2  category.html  category.j2  footer.html  footer.j2  index.html  index.j2  page.j2  tag.j2  tags.j2
(+2 files in other folders)
