[tool.poetry]
name = "aalmazan-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = { extras = ["markdown"], version = "^4.8.0" }
invoke = "^2.2.0"
ghp-import = "^2.1.0"
minchin-pelican-plugins-cname = "^1.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
doc8 = "^1.1.1"
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
ipython = "^8.16.1"
typogrify = "^2.0.7"
jinja2 = "^3.1.2"
pygments = "^2.16.1"
mdx-include = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
